[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/player/jvacina crop.png" type="Texture" id=2]
[ext_resource path="res://assets/player/jvacina crop(no_vac).png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "jvacina",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 77.6258
height = 46.7315

[node name="player" type="KinematicBody2D" groups=[
"player1",
]]
position = Vector2( 190.534, 134.601 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 200

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( -9.45093, -2.08325 )
scale = Vector2( 0.177088, 0.177088 )
frames = SubResource( 1 )
animation = "jvacina"
flip_h = true

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -17.1036, -4.85385 )
shape = SubResource( 2 )

[node name="VacDelay" type="Timer" parent="."]
one_shot = true

[node name="vacpos1" type="Position2D" parent="."]
position = Vector2( 37.6109, -40.7893 )

[node name="vacpos2" type="Position2D" parent="."]
position = Vector2( -55.1543, -39.598 )

[node name="player_hitbox" type="Area2D" parent="." groups=[
"player",
]]

[node name="collisionShape2D2" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2( -11.4404, -4.85385 )
shape = SubResource( 2 )

[node name="wont_move" type="Timer" parent="."]
[connection signal="area_entered" from="player_hitbox" to="." method="_on_player_hitbox_area_entered"]
